<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="facebook_application_id" translatable="false">6693675194007458</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb6693675194007458</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List view</string>
    <string name="work_mates">Work mates</string>
    <string name="your_lunch">Your lunch</string>
    <string name="connection_succeed">Successful connection</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="center_on_my_position">Center on my position</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>

    <string name="hasnt_decided">%s hasn\'t decided yet.</string>
    <string name="is_eating_at">%1$s is eating at %2$s</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="i_want_to_eat_there">I want to eat there</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="camera_automatic">Put camera back in automatic mode</string>
    <string name="openUntil">Open until %s</string>
    <string name="closedUntilDayHour">Closed until %1$s, %2$s</string>
    <string name="closedUntilHour">Closed until %s</string>
    <string name="closedUntilTomorrow">"Closed until tomorrow, %s"</string>
    <string name="closingSoon">Closing soon</string>
    <string name="unknownOpeningHours">Unknown Opening hours</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter the name of the restaurant</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Every day at 12 o\'clock, remind me my choice of restaurant</string>
    <string name="you_are_eating_at">You\'re eating at %s.</string>
    <string name="you_ll_be_eating_with">\nYou\'ll be eating with:</string>

    <string name="title_activity_settings">Settings</string>
    <string name="notifications_header">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="notifications_summary">Get a notification everyday at 12 o\'clock reminding you your choice of restaurant.</string>
    <string name="is_joining">%s is joining !</string>
    <string name="sort">Sort</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_number_of_workmates">Sort by number of workmates</string>
    <string name="sort_by_opening_hours">Sort by opening hours</string>
    <string name="data_management">Data management</string>
    <string name="delete_personal_data">Delete all my personal data</string>
    <string name="delete_account_dialog_title">Delete my account</string>
    <string name="delete_account_warning">You are about to lose your data. Are you sure ?</string>
    <string name="delete_acount_dialog_confirm">Delete</string>
    <string name="delete_acount_dialog_cancel">Cancel</string>
</resources>