<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_view">

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.fthiery.go4lunch.ui.map.MapFragment"
        android:label="@string/map_view"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.fthiery.go4lunch.ui.list.ListFragment"
        android:label="@string/list_view"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_workmates_view"
        android:name="com.fthiery.go4lunch.ui.workmates.WorkMatesFragment"
        android:label="@string/work_mates"
        tools:layout="@layout/fragment_workmates" />
</navigation>